--- a/package.json
+++ b/package.json
@@ -6,28 +6,70 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build --mode analyze",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:a11y": "vitest run src/test/a11y",
+    "test:integration": "vitest run src/test/integration",
+    "test:performance": "vitest run src/test/performance",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "optimize:assets": "node scripts/optimize-assets.js",
+    "analyze": "npm run build:analyze"
   },
   "dependencies": {
+    "@sentry/react": "^10.5.0",
+    "@sentry/vite-plugin": "^4.1.1",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.8.0",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.54.2",
+    "@squoosh/lib": "^0.3.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "vite": "^7.1.2"
+    "jest": "^30.0.5",
+    "jest-axe": "^10.0.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jsdom": "^26.1.0",
+    "lighthouse": "^12.8.1",
+    "playwright": "^1.54.2",
+    "puppeteer": "^24.16.2",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "sharp": "^0.34.3",
+    "vite": "^7.1.2",
+    "vite-bundle-analyzer": "^1.2.1",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^1.0.2",
+    "vitest": "^3.2.4",
+    "web-vitals": "^5.1.0"
   }
 }
