--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.8.0",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.7"
   },
